updates fixes jump position, allows direct open of more window

--- a/local/scss/base/_defaults.scss
+++ b/local/scss/base/_defaults.scss
@@ -112,31 +112,17 @@ hr.mini-divider{
 	}
 }
 
-// .jumptarget:focus{
-// 	outline: none;
-// }
-// .jumptarget:before {
-//   content: "";
-//   display: block;
-//   height: $ls-navbar-height-xs;
-//   margin: -$ls-navbar-height-xs 0 0;
-//   @media (min-width: $screen-md) {
-//   	height: $ls-navbar-height;
-//   	margin: -$ls-navbar-height 0 0;
-//   }
-// }
-
-// .has-page-nav{
-// 	.jumptarget:before{
-// 		height: $ls-navbar-height-xs + $page-nav-height-xs;
-// 		margin: -($ls-navbar-height-xs + $page-nav-height-xs) 0 0;
-// 		@media (min-width: $screen-md) {
-// 			height: $ls-navbar-height + $page-nav-height;
-// 			margin: -($ls-navbar-height + $page-nav-height) 0 0;
-// 		}
-// 	}
-// }
-
+.jumptarget{
+	display: block;
+	&:focus{
+		outline: none;
+	}
+	&::before {
+		content: "";
+		display: block;
+		visibility: hidden; 
+	}
+}
 
 .has-divider{
 	@include divider-title; 
